--- a/decryptTemplate.html
+++ b/decryptTemplate.html
@@ -146,12 +146,12 @@
             height: 50px;
             background-color: #242426;
             border-radius: 25px;
-            /* box-shadow: 0 10px 30px 0px rgba(87, 184, 70, 0.5); */
+            box-shadow: 0 10px 30px 0px rgba(87, 184, 70, 0.5);
             -moz-box-shadow: 0 10px 30px 0px rgba(87, 184, 70, 0.5);
-            /* -webkit-box-shadow: 0 10px 30px 0px rgba(87, 184, 70, 0.5); */
+            -webkit-box-shadow: 0 10px 30px 0px rgba(87, 184, 70, 0.5);
             -o-box-shadow: 0 10px 30px 0px rgba(87, 184, 70, 0.5);
             -ms-box-shadow: 0 10px 30px 0px rgba(87, 184, 70, 0.5);
-            /* -webkit-transition: all 0.4s; */
+            -webkit-transition: all 0.4s;
             -o-transition: all 0.4s;
             -moz-transition: all 0.4s;
             transition: all 0.4s;
@@ -1416,7 +1416,6 @@ code.google.com/p/crypto-js/wiki/License
         }
 
         function doSubmit(evt) {
-            console.log("here");
             try {
                 var decrypted = decryptFile(CryptoJS.enc.Base64.parse(pl.data), passEl.value, CryptoJS.enc.Base64.parse(
                     pl.salt), CryptoJS.enc.Base64.parse(pl.iv));
